force-app/main/default/objects/Adjustment_Schedule__c/Adjustment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Adjustment Schedule</label>
    <nameField>
        <label>Lead Contract</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adjustment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>