force-app/main/default/objects/Adjustment_Schedule__c/fields/APTS_ID_from_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>APTS_ID_from_Sandbox__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>APTS ID from Sandbox</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>