force-app/main/default/objects/Adjustment_Schedule__c/fields/Contract_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year__c</fullName>
    <label>Contract Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>