force-app/main/default/objects/Adjustment_Schedule__c/fields/Order_Year__c.field-meta.xml
<CustomField>
    <fullName>Order_Year__c</fullName>
    <label>Order Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>