force-app/main/default/objects/Adjustment_Schedule__c/fields/Pricing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract__c</fullName>
    <label>Pricing Contract</label>
    <length>25</length>
    <type>Text</type>
</CustomField>