force-app/main/default/objects/Adjustment_Schedule__c/fields/Reprice_Code__c.field-meta.xml
<CustomField>
    <fullName>Reprice_Code__c</fullName>
    <label>Reprice Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>