force-app/main/default/objects/Adjustment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Contract__c</columns>
    <columns>Order_Year__c</columns>
    <columns>Contract_Year__c</columns>
    <columns>Reprice_Code__c</columns>
    <columns>Discount__c</columns>
    <columns>Tier__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>19575</value>
    </filters>
    <filters>
        <field>Reprice_Code__c</field>
        <operation>startsWith</operation>
        <value>L</value>
    </filters>
    <filters>
        <field>Order_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>