force-app/main/default/objects/Adjustment_Schedule__c/listViews/search_by_contract.listView-meta.xml
<ListView>
    <fullName>search_by_contract</fullName>
    <columns>NAME</columns>
    <columns>Contract_Year__c</columns>
    <columns>Discount__c</columns>
    <columns>Order_Year__c</columns>
    <columns>Pricing_Contract__c</columns>
    <columns>Reprice_Code__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pricing_Contract__c</field>
        <operation>equals</operation>
        <value>14501</value>
    </filters>
    <label>search_by_contract</label>
    <language>en_US</language>
</ListView>