force-app/main/default/objects/Adjustment_Schedule__c/listViews/Search_Contract.listView-meta.xml
<ListView>
    <fullName>Search_Contract</fullName>
    <columns>Pricing_Contract__c</columns>
    <columns>NAME</columns>
    <columns>Order_Year__c</columns>
    <columns>Contract_Year__c</columns>
    <columns>Reprice_Code__c</columns>
    <columns>Discount__c</columns>
    <columns>Tier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Search Contract</label>
    <language>en_US</language>
</ListView>